Remove Commons-Codec
~ Usages of "Base64.encodeBase64"replaced with "DatatypeConverter.printBase64Binary"
- POM's "commons-codec" dependency